cmake_minimum_required(VERSION 3.11)

project(Containment VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

set(PROJECT_SOURCES
		main.cpp
		container.cpp
		container.h
		game.h
		game.cpp
)

qt_add_executable(Containment MANUAL_FINALIZATION ${PROJECT_SOURCES})

target_link_libraries(Containment PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

set_target_properties(Containment PROPERTIES
	MACOSX_BUNDLE_GUI_IDENTIFIER com.containment.engineering-deck
	MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
	MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
	MACOSX_BUNDLE TRUE
	WIN32_EXECUTABLE TRUE
)

install(TARGETS Containment
	BUNDLE DESTINATION .
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

qt_finalize_executable(Containment)
